--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
+    "autoprefixer": "^10.4.13",
+    "element-plus": "^2.2.22",
+    "postcss-import": "^15.0.0",
     "vue": "^3.2.41"
   },
   "engines": {
@@ -60,9 +64,12 @@
     "pinia": "^2.0.23",
     "pinia-plugin-persistedstate": "^2.3.0",
     "plop": "^3.1.1",
+    "postcss": "^8.4.19",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.7.1",
     "prism-theme-vars": "^0.2.4",
     "prismjs": "^1.29.0",
+    "sass": "^1.56.1",
     "typescript": "^4.8.4",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-icons": "^0.14.13",
