--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # 通用环境变量
 
 # 标题
-VITE_APP_TITLE = tov
+VITE_APP_TITLE = 深圳第二医院
 
 
 # markdown 渲染支持
-VITE_APP_MARKDOWN = true
+VITE_APP_MARKDOWN = false
 
 
 # 开发时 Inspect 调试支持
-VITE_APP_INSPECT = true
+VITE_APP_INSPECT = false
 
 
 # 生产时 mock 支持
