完成医生简介静态页面

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ VITE_APP_INSPECT = false
 
 
 # 生产时 mock 支持
-VITE_APP_MOCK_IN_PRODUCTION = false
+VITE_APP_MOCK_IN_PRODUCTION = true
 
 
 # 生产时压缩算法，可选 gzip, brotliCompress, deflate, deflateRaw
