--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
 		// prettier 作为规则
 		"prettier/prettier": "error",
 		// 禁止使用 var，而应该用 let 或 const
-		"no-var": "error"
+		"no-var": "error",
+		"vue/no-v-html":"off"
 	},
 	"globals": {
 		"defineOptions": true
