--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "@three-ts/orbit-controls": "^1.4.7",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
     "element-plus": "^2.2.22",
     "postcss-import": "^15.0.0",
+    "three": "^0.146.0",
     "vue": "^3.2.41"
   },
   "engines": {
@@ -40,6 +42,7 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/ityped": "^1.0.1",
     "@types/node": "^18.11.9",
+    "@types/three": "^0.146.0",
     "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.0",
